[DOCS-1217] Fix logo jumping

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -110,7 +110,7 @@ img {
   display: flex;
   align-items: center;
   width: 184px;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 .logo-wrapper::after {
@@ -208,6 +208,11 @@ img {
 
 .navbar__items {
   font-size: 0.875rem;
+}
+
+.navbar__logo {
+  position: absolute;
+  top: -4px;
 }
 
 /* Overrides for the banner on the landing page */
